src/test/deca/syntax/valid/not_provided/println_multiple.deca
// Description:
//    Programme avec plusieurs println.
//
// Resultats:
//    Quatre retours à la ligne.
//
// Historique:
//    cree le 05/01/2022

{
        println();
        println();
        println();
        println();
}
