src/test/deca/syntax/invalid/not_provided/instruction_sans_bloc.deca
// Description:
//    Instruction sans bloc
//
// Resultats:
//    ligne 10 : Erreur parseur, pas de bloc
//
// Historique:
//    cree le 05/01/2022

println("ne marche pas");